--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "rpg-awesome": "^0.2.0"
+    "rpg-awesome": "^0.2.0",
+    "uuid": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
