--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,6 +13,7 @@
     "axios": "^0.19.2",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
+    "react-animated-modal": "^1.1.1",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
